--- a/bode.ipynb
+++ b/bode.ipynb
@@ -189,6 +189,7 @@
     "\n",
     "def poly_to_tuple(string):\n",
     "    substring = string.replace('^', '**')\n",
+    "    substring = string.replace(' ','')\n",
     "    degree = match(substring)\n",
     "    coeffs = []\n",
     "\n",
