--- a/bode.ipynb
+++ b/bode.ipynb
@@ -190,6 +190,7 @@
     "def poly_to_tuple(string):\n",
     "    substring = string.replace('^', '**')\n",
     "    substring = string.replace(' ','')\n",
+    "    substring = string.replace('x','s')\n",
     "    degree = match(substring)\n",
     "    coeffs = []\n",
     "\n",
